--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-section">
       <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i>AHMEDABAD,GUJRAT</p>
       <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +91 8849025906</p>
-      <p><a href="vishnusuvaliya378@gmail.com"><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"></i></a>Email: vishnusuvaliya378@gmail.com</p>
+      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"></i>Email:vishnusuvaliya378@gmail.com</p>
     </div><br>
     <p>Let's get in touch. Send me a message:</p>
 
